@@ -1,43 +1,32 @@
 <?php
-/***************************************************************
-*  Copyright notice
-*
-*  (c) 2005-2008 Stanislas Rolland (stanislas.rolland@sjbr.ca)
-*  All rights reserved
-*
-*  This script is part of the Typo3 project. The Typo3 project is
-*  free software; you can redistribute it and/or modify
-*  it under the terms of the GNU General Public License as published by
-*  the Free Software Foundation; either version 2 of the License, or
-*  (at your option) any later version.
-*
-*  The GNU General Public License can be found at
-*  http://www.gnu.org/copyleft/gpl.html.
-*  A copy is found in the textfile GPL.txt and important notices to the license
-*  from the author is found in LICENSE.txt distributed with these scripts.
-*
-*  This script is distributed in the hope that it will be useful,
-*  but WITHOUT ANY WARRANTY; without even the implied warranty of
-*  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-*  GNU General Public License for more details.
-*
-*  This copyright notice MUST APPEAR in all copies of the script!
-***************************************************************/
-/**
+/*
+ *  Copyright notice
  *
- * Example of hook handler for extension Front End User Registration (sr_feuser_register)
+ *  (c) 2005-2015 Stanislas Rolland <typo3(arobas)sjbr.ca>
+ *  All rights reserved
  *
- * $Id$
+ *  This script is part of the TYPO3 project. The TYPO3 project is
+ *  free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
  *
- * @author Stanislas Rolland <stanislas.rolland(arobas)sjbr.ca>
+ *  The GNU General Public License can be found at
+ *  http://www.gnu.org/copyleft/gpl.html.
+ *  This script is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  GNU General Public License for more details.
  *
+ *  This copyright notice MUST APPEAR in all copies of the script!
  */
-
+/**
+ * Example of hook handler for extension Front End User Registration (sr_feuser_register)
+ */
 
 class tx_srfeuserregister_hooksHandler {
 	public function registrationProcess_beforeConfirmCreate (&$recordArray, &$controlDataObj) {
-			// in the case of this hook, the record array is passed by reference
-			// in this example hook, we generate a username based on the first and last names of the user
+		// in the case of this hook, the record array is passed by reference
+		// in this example hook, we generate a username based on the first and last names of the user
 		$cmdKey = $controlDataObj->getCmdKey();
 		$theTable = $controlDataObj->getTable();
 		if ($controlDataObj->getFeUserData('preview') && $controlDataObj->conf[$cmdKey . '.']['generateUsername']) {
@@ -110,9 +99,3 @@ class tx_srfeuserregister_hooksHandler {
 	public function addGlobalMarkers (&$markerArray, &$invokingObj) {
 	}
 }
-
-if (defined('TYPO3_MODE') && $GLOBALS['TYPO3_CONF_VARS'][TYPO3_MODE]['XCLASS']['ext/sr_feuser_register/hooks/class.tx_srfeuserregister_hooksHandler.php']) {
-	include_once($GLOBALS['TYPO3_CONF_VARS'][TYPO3_MODE]['XCLASS']['ext/sr_feuser_register/hooks/class.tx_srfeuserregister_hooksHandler.php']);
-}
-
-?>
