@@ -1,3 +1,6 @@
+2015-10-18 Stanislas Rolland  <typo3(arobas)sjbr.ca>
+	* [!!!]Resolves #70822: Restructure captcha hooks
+
 2015-10-14 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Resolves #70732: Move configuration files to Configuration directory
 	* Resolves #62206: Array problem with 5.4+
